--- a/configurations/authorization_server/authorization_server-develop.yml
+++ b/configurations/authorization_server/authorization_server-develop.yml
@@ -55,7 +55,7 @@ logging:
         security:
           oauth2: debug
         web: DEBUG
-      hibernate: debug
+      hibernate:
         SQL: debug
         type:
           descriptor:
