--- a/configurations/authorization_server/authorization_server-staging.yml
+++ b/configurations/authorization_server/authorization_server-staging.yml
@@ -52,10 +52,10 @@ logging:
   level:
     org:
       springframework:
-        security: DEBUG
+        security:
           oauth2: debug
         web: DEBUG
-      hibernate: debug
+      hibernate:
         SQL: debug
         type:
           descriptor:
